# screenshotsafe

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
apple/ScreenshotSafe/ScreenshotSafe.xcodeproj/: project.pbxproj
apple/ScreenshotSafe/Shared (App)/: ViewController.swift
apple/ScreenshotSafe/Shared (Native)/: ScreenshotSafeSettings.swift  ScreenshotSafeUploadClient.swift
apple/ScreenshotSafe/Shared (Safari Extension)/: SafariWebExtensionHandler.swift
apple/ScreenshotSafe/Shared (Safari Extension)/Resources/: background.js  editor.html  editor.js  manifest.json  options.html  options.js  popup.html  popup.js  theme.js  webext-api.js
apple/ScreenshotSafe/iOS (App)/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ScreenshotSafe.entitlements
apple/ScreenshotSafe/iOS (Share Extension)/: ShareViewController.swift
apple/ScreenshotSafe/macOS (App)/: AppDelegate.swift
apple/ScreenshotSafe/macOS (Safari Extension)/: ScreenshotSafeExtension.entitlements
apple/ScreenshotSafe/macOS (Share Extension)/: Info.plist  ScreenshotSafeShare.entitlements  ShareViewController.swift
benches/: db_bench.rs
docs/: api.md  architecture.md  invariants.md  privacy-policy.md  safari-extension.md  testing.md
extension/: background.js  editor.html  editor.js  manifest.json  manifest.safari.json  options.html  options.js  popup.html  popup.js  theme.js  webext-api.js
safari/ScreenshotSafe/ScreenshotSafe.xcodeproj/: project.pbxproj
safari/ScreenshotSafe/Shared (App)/: ViewController.swift
safari/ScreenshotSafe/Shared (App)/Resources/: Script.js
safari/ScreenshotSafe/Shared (Extension)/: SafariWebExtensionHandler.swift
safari/ScreenshotSafe/Shared (Extension)/Resources/: background.js  editor.js  popup.html  popup.js
safari/ScreenshotSafe/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
safari/ScreenshotSafe/macOS (App)/: AppDelegate.swift  Info.plist  ScreenshotSafe.entitlements
scripts/: build-safari-extension.sh
src/: config.rs  db.rs  error.rs  image_processing.rs  lib.rs  main.rs  models.rs  rate_limit.rs  share_id.rs
src/auth/: middleware.rs  mod.rs
src/routes/: api.rs  mod.rs  pages.rs  share.rs
static/css/: editor.css  style.css
static/js/: editor.js
tests/: integration_tests.rs
(+4 files in other folders)
