[package]
name = "screenshotsafe"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"

# Image processing
image = "0.25"
imageproc = "0.25"
tiny-skia = "0.11"
rusttype = "0.9"

# IDs & randomness
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base62 = "2"

# Config & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
thiserror = "2"
anyhow = "1"
mime_guess = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart", "json"] }
tempfile = "3"
